--- a/1.html
+++ b/1.html
@@ -3,15 +3,17 @@
 <head>
 <title>WEB1  - HTML</title>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">Javascript</a></li>
 </ol>
-
+<div id="article">
 <h2>HTML</h2>
 <p>
   <a href="https://www.w3.org/TR/html51/" target="_blank" title="HTML5 specification">Hypertext Markup Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
@@ -24,5 +26,7 @@ HTML describes the structure of a web page semantically and originally included 
   It provides a meas to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items.
   HTML elements are delineated by tags, written using angle brackets.
 </p>
+</div>
+</div>
 </body>
 </html>
