--- a/2.html
+++ b/2.html
@@ -3,14 +3,19 @@
 <head>
 <title>WEB1  - CSS</title>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">Javascript</a></li>
 </ol>
+
+<div id="article">
 
 <h2>CSS</h2>
 <p>
@@ -24,5 +29,9 @@
   This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .
   css file, and reduce complexity and repetition in the structural content.
 </p>
+
+</div>
+
+</div>
 </body>
 </html>
