--- a/3.html
+++ b/3.html
@@ -3,15 +3,17 @@
 <head>
 <title>WEB1  - Javascript</title>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">Javascript</a></li>
 </ol>
-
+<div id="article">
 <h2>Javascript</h2>
 <p>
   JavaScript ,often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
@@ -22,5 +24,7 @@
   Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.[8] JavaScript enables interactive web pages and is an essential part of web applications.
   The vast majority of websites use it for client-side page behavior,[9] and all major web browsers have a dedicated JavaScript engine to execute it.
 </p>
+</div>
+</div>
 </body>
 </html>
