--- a/index.html
+++ b/index.html
@@ -3,16 +3,35 @@
 <head>
 <title>WEB1  - Welcome</title>
 <meta charset="UTF-8">
+
+<style>
+a{
+  text-decoration: none;
+}
+h1{
+  font-size: 45px;
+  text-align: center;
+}
+</style>
+
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+<!--
+<h1><a href="index.html">WEB</a></h1>
+<ol>
+  <li><a href="1.html"><font color="red">HTML</font></a></li>
+  <li><a href="2.html">CSS</a></li>
+  <li><a href="3.html">Javascript</a></li>
+</ol>
+-->
+<h1><a href="index.html">WEB</a></h1>
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">Javascript</a></li>
 </ol>
 
-<h2>WEB</h2>
+<h2 >WEB</h2>
 <p>
   The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://www.example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2]
   The resources of the WWW are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server.
